fixed googletest seg fault by pulling 1.8.2 branch and changing cmake git automation

--- a/tests/unit/CMakeLists.txt
+++ b/tests/unit/CMakeLists.txt
@@ -7,7 +7,7 @@ ${PROJECT_SOURCE_DIR}/ext/serial/include
 ${PROJECT_SOURCE_DIR}/ext/googletest/googletest/include
 ${PROJECT_SOURCE_DIR}/src 
 ${PROJECT_SOURCE_DIR}/include)
-list(APPEND EXTRA_LIBS serial lx16a_lib gtest_main)
+list(APPEND EXTRA_LIBS serial lx16a_lib gtest)
 
 target_include_directories(unit PUBLIC ${EXTRA_INCLUDES})
 
@@ -15,3 +15,4 @@ target_link_libraries(unit ${EXTRA_LIBS})
 
 include(GoogleTest)
 gtest_discover_tests(unit)
+# -Dgtest_disable_pthreads=OFF
