--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.10)
 
-project(lx16a VERSION 0.1)
+project(lx16a VERSION 0.2)
 
 set(CMAKE_CXX_STANDARD 11)
 set(CMAKE_CXX_STANDARD_REQUIRED True)
@@ -27,19 +27,19 @@ set(CMAKE_CXX_STANDARD_REQUIRED True)
 
 # Update CMakeLists.txt path for more/different submodules
 
-if(NOT EXISTS "${PROJECT_SOURCE_DIR}/ext/serial/CMakeLists.txt")
+if(NOT EXISTS "${PROJECT_SOURCE_DIR}/ext/myserial/CMakeLists.txt")
     message(FATAL_ERROR "The submodules were not downloaded! GIT_SUBMODULE was turned off or failed. Please update submodules and try again.")
 endif()
 
-list(APPEND EXTRA_INCLUDES ${PROJECT_SOURCE_DIR} ${PROJECT_SOURCE_DIR}/ext/serial/include ${PROJECT_SOURCE_DIR}/src ${PROJECT_SOURCE_DIR}/include)
-list(APPEND EXTRA_LIBS serial lx16a_lib)
+# list(APPEND EXTRA_INCLUDES ${PROJECT_SOURCE_DIR} ${PROJECT_SOURCE_DIR}/ext/myserial/include ${PROJECT_SOURCE_DIR}/src ${PROJECT_SOURCE_DIR}/include)
+# list(APPEND EXTRA_LIBS serial lx16a_lib)
 
-add_subdirectory(${PROJECT_SOURCE_DIR}/ext/serial)
+add_subdirectory(${PROJECT_SOURCE_DIR}/ext/myserial)
 add_subdirectory(${PROJECT_SOURCE_DIR}/src)
 add_subdirectory(${PROJECT_SOURCE_DIR}/tests/hhm)
-add_subdirectory(${PROJECT_SOURCE_DIR}/tests/poc)
-add_subdirectory(${PROJECT_SOURCE_DIR}/tests/basic_test)
-add_subdirectory(${PROJECT_SOURCE_DIR}/tests/unit)
+# add_subdirectory(${PROJECT_SOURCE_DIR}/tests/poc)
+# add_subdirectory(${PROJECT_SOURCE_DIR}/tests/basic_test)
+# add_subdirectory(${PROJECT_SOURCE_DIR}/tests/unit)
 
 # target_include_directories(${PROJECT_NAME} PUBLIC ${EXTRA_INCLUDES})
 
